--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,4 +31,4 @@ jobs:
           publish_dir: ./public
           user_name: cgutierr-zgz
           user_email: carlosgutimo.3d@gmail.com
-          publish_branch: master
+          publish_branch: deploy
