--- a/config.yaml
+++ b/config.yaml
@@ -1,54 +1,23 @@
 baseURL: "https://cgutierr-zgz.github.io/"
-title: carlosgutimo
+title: cgutierr-zgz
 paginate: 5
 theme: PaperMod
-
-languages:
-    en:
-        languageName: "English"
-        weight: 1
-
-    es:
-        languageName: ":es:"
-        languageAltTitle: Spanish
-        weight: 2
-        profileMode:
-          enabled: true # needs to be explicitly set
-          title: "Hola! \U0001F44B"
-          subtitle: "Bienvenido a mi sitio web"
-          #imageUrl: "<img location>"
-          #imageWidth: 120
-          #imageHeight: 120
-          #imageTitle: my image
-          buttons:
-            - name: github
-              url: "https://github.com/cgutierr-zgz"
-            - name: linkedin
-              url: "https://www.linkedin.com/in/cgutierr/"
-
 enableRobotsTXT: true
 buildDrafts: false
 buildFuture: false
 buildExpired: false
-
-#googleAnalytics: UA-123-45
-
 minify:
   disableXML: true
   minifyOutput: true
-
 params:
-  env: production # to enable google analytics, opengraph, twitter-cards and schema.
-  title: carlosgutimo
+  env: production
+  title: cgutierr-zgz
   description: "My personal website"
   keywords: [Website, Portfolio]
-  author: carlosgutimo
-  # author: ["Me", "You"] # multiple authors
-  #images: ["<link or path of image for opengraph, twitter-cards>"]
+  author: cgutierr-zgz
   DateFormat: "2 January, 2006"
-  defaultTheme: auto # dark, light
+  defaultTheme: dark
   disableThemeToggle: false
-
   ShowReadingTime: true
   ShowShareButtons: true
   ShowPostNavLinks: true
@@ -64,68 +33,31 @@ params:
   hideSummary: false
   showtoc: false
   tocopen: false
-
-  #assets:
-    # disableHLJS: true # to disable highlight.js
-    # disableFingerprinting: true
-    #favicon: "assets/favicon_16.png"
-    #favicon16x16: "assets/favicon_16.png"
-    #favicon32x32: "assets/favicon_32.png"
-    #apple_touch_icon: "assets/apple_touch_icon.png"
-    #safari_pinned_tab: "<link / abs url>"
-
   label:
-    text: "carlosgutimo"
+    text: "cgutierr-zgz"
     icon: /apple-touch-icon.png
     iconHeight: 35
-
-  # profile-mode
   profileMode:
-    enabled: true # needs to be explicitly set
+    enabled: true
     title: "Hi there \U0001F44B"
     subtitle: "Welcome to my website"
-    #imageUrl: "<img location>"
-    #imageWidth: 120
-    #imageHeight: 120
-    #imageTitle: my image
     buttons:
       - name: github
         url: "https://github.com/cgutierr-zgz"
       - name: linkedin
-        url: "https://www.linkedin.com/in/cgutierr/"
-
-  # home-info mode
+        url: "https://www.linkedin.com/in/cgutierr"
   homeInfoParams:
     Title: "Hi there \U0001F44B"
     Content: |
       Contact me at carlosgutimo.3d@gmail.com
-
-  #socialIcons:
-  #  - name: linkedin
-  #    url: "https://www.linkedin.com/in/cgutierr/"
-  #  - name: github
-  #    url: "https://github.com/cgutierr-zgz"
-
-  #analytics:
-  #  google:
-  #    SiteVerificationTag: "XYZabc"
-  #  bing:
-  #    SiteVerificationTag: "XYZabc"
-  #  yandex:
-  #    SiteVerificationTag: "XYZabc"
-
   cover:
-    hidden: true # hide everywhere but not in structured data
-    hiddenInList: true # hide on list pages and home
-    hiddenInSingle: true # hide on single page
-
+    hidden: true
+    hiddenInList: true
+    hiddenInSingle: true
   editPost:
-    URL: "https://github.com/<path_to_repo>/content"
-    Text: "Suggest Changes" # edit text
-    appendFilePath: true # to append file path to Edit link
-
-  # for search
-  # https://fusejs.io/api/options.html
+    URL: "https://github.com/cgutierr-zgz/cgutierr-zgz.github.io/blob/master/content"
+    Text: "Suggest Changes"
+    appendFilePath: true
   fuseOpts:
     isCaseSensitive: false
     shouldSort: true
@@ -136,42 +68,15 @@ params:
     keys: ["title", "permalink", "summary", "content"]
 menu:
   main:
-    #- identifier: search
-    #  name: search
-    #  url: /search/
-    #  weight: 10
     - identifier: posts
       name: posts
       url: /posts/
       weight: 10
-    #- identifier: tags
-    #  name: tags
-    #  url: /tags/
-    #  weight: 20
-    #- identifier: linkedin
-    #  name: linkedin
-    #  url: "https://www.linkedin.com/in/cgutierr/"
-    #  weight: 10
-    #- identifier: github
-    #  name: github
-    #  url: "https://github.com/cgutierr-zgz"
-    #  weight: 20
-    #- identifier: tags
-    #  name: tags
-    #  url: /tags/
-    #  weight: 20
-    #- identifier: carlosgutimo
-    #  name: cgutierr-zgz.github.io/
-    #  url: https://cgutierr-zgz.github.io/
-    #  weight: 30
-
-# Read: https://github.com/adityatelange/hugo-PaperMod/wiki/FAQs#using-hugos-syntax-highlighter-chroma
 pygmentsUseClasses: true
 markup:
   highlight:
     noClasses: false
-    # anchorLineNos: true
-    # codeFences: true
-    # guessSyntax: true
-    # lineNos: true
-    # style: monokai
+languages:
+  en:
+    languageName: "English"
+    weight: 1
