--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,11 +17,12 @@ jobs:
         run: git submodule update --init --recursive
 
       - name: 🤫 Install HUGO
-        run: brew install hugo
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: 'latest'
 
       - name: 🔨 Build Web
         run: hugo --minify
-
 
       - name: 🛥 Deploy
         uses: peaceiris/actions-gh-pages@v3
