--- a/.github/workflows/pre-merge.yaml
+++ b/.github/workflows/pre-merge.yaml
@@ -17,7 +17,9 @@ jobs:
         uses: actions/checkout@v3.1.0
 
       - name: 🤫 Install HUGO
-        run: brew install hugo
+        uses: peaceiris/actions-hugo@v2
+        with:
+          hugo-version: 'latest'
 
       - name: 🔨 Build Web
         run: hugo --minify
